lab6/lab6/manifests/30-networkpolicy/00-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: lab6
spec:
  podSelector: {}
  policyTypes: [Ingress, Egress]
